--- a/index.html
+++ b/index.html
@@ -259,18 +259,16 @@
           <p class="third-section__text">
             С самого детства мои руки тянулись к гитаре.<br />
             В садике, пока все дети играли в куклы, я убегал в укромное место и
-            представлял, как перебираю струны своего любимого инструмента. Даже
-            в тихий час мои пальчки так и елозили под одеялом.
+            представлял, как перебираю струны своего любимого инструмента.
             <br /><br />
 
             Когда я стал взрослым, то выучил все аккорды, переборы, баре и даже
-            научился настраивать гитару в наушниках. Я действительно хорош,
-            словно плотная хаешка на 70 хп. О чём ещё думать? Я сделаю из вас
-            мастеров и будущих бардов. ДРЫНЬ!
+            научился настраивать гитару в наушниках. Я действительно хорош, о чём ещё думать? 
+            Я сделаю из вас мастеров и будущих бардов. ДРЫНЬ!
           </p>
           <p class="third-section__text-mobile-horizontal">
-            С самого детства мои руки тянулись к гитаре. Ещё в садике в тихий
-            час мои пальчки так и елозили под одеялом.
+            С самого детства мои руки тянулись к гитаре.  В садике я
+            представлял, как играю на ней.
             <br /><br />
 
             Когда я стал взрослым, то выучил все аккорды, переборы, баре и даже
