--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
         <!-- Заголовок футера + иконки с соц-сетями -->
         <div class="site-footer__main-content-wrapper">
           <h4 class="site-footer__title title">
-            Zапишись на<br />пробный урок
+            Запишись на<br />пробный урок
             <hr class="title__hr title__hr_footer" />
           </h4>
           <div class="site-footer__social-icons-box social-icons">
